# backend-template

./: Cargo.toml  Dockerfile.distroless  distroless.Dockerfile  docker-compose.yaml  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
migrations/: Cargo.toml
migrations/src/: main.rs
src/: main.rs
test/: run_docker_compose.py
