[package]
name = "fin-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = {version="0.7.2"}
tokio = {version="1.35.0", features = ["full"]}
thiserror = "1.0.50"
tokio-postgres = {version="0.7.10", features=["with-chrono-0_4", "with-uuid-1"]}
bb8-postgres = "0.8.1"
uuid = "1.6.1"
chrono = {version="0.4.31", features=["serde"]}
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0"
