[workspace]
members = [
    "backend",
    "migrations"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Santiago Torres"]
description = "Template for creating rust backend projects with axum, postgres and database migrations"

[workspace.dependencies]
axum = {version="0.7.5"}
tokio = {version="1.36.0", features = ["full"]}
thiserror = "1.0.58"
tokio-postgres = {version="0.7.10", features=["with-chrono-0_4", "with-uuid-1"]}
bb8-postgres = "0.8.1"
uuid = "1.8.0"
chrono = {version="0.4.38", features=["serde"]}
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0"
refinery = {version="0.8.12", features=["tokio-postgres"]}
dotenv = "0.15.0"

[build]
rustflags = ["-Clinker=rust-lld"]
