[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {workspace=true}
tokio = {workspace=true}
thiserror = {workspace=true}
tokio-postgres = {workspace=true}
bb8-postgres = {workspace=true}
uuid = {workspace=true}
chrono = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
