[package]
name = "migrations"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace=true}
tokio-postgres = {workspace=true}
refinery = {workspace=true}
